[project]
name = "pole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.5.5",
    "gpt4all>=2.8.2",
    "litellm>=1.70.0",
    "neo4j>=5.28.1",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
]
